# missing_semester_notes

./: .pre-commit-config.yaml  01_shell.md  02_shell_tools_and_scripting.md  03_vim.md  04_data_wrangling.md  05_command_line_environment.md  07_Debugging and Profiling.md  07_debugging_and_profiling.md  07sorts.py  08_metaprogramming.md  09_security_and_cryptography.md  Makefile  README.md  draft.md  readme.md
.github/worfklows/: cicd_every_push.yml
.github/workflows/: cicd_every_push.yml
02_files/: debug_script.sh  marco.sh  polo.sh
07_files/: 07bubble.py  07fibonacci.py  07fibonacci_memoization.py  07shellcheck.sh  07shellcheck_linted.sh  07sorts.py
08_files/: Cargo.toml  Makefile
09_files/: debian_sha256sum_ar.txt
