# cargo.toml
[package]
name = "my-package"
version = "0.1.0"


[dependencies]
time = "0.1.12"          # does not change left most non zero digits
                         # 0.1.12 := >=0.1.12, <0.2.0

openssl = "^1.0.1"       # caret = exact

regex = "~0.1"           # tilde = minimal version with some ability to update
                         # ~0.1 := >=0.1.0, <0.2.0

python = "3.*"           # wildcard : any version allwoed by wildcard

libX = ">= 1.2.0"        # comparison

libY= ">= 1.2, < 1.5"    # multiple
